--- a/Barcode Scanner/MainWindow.xaml
+++ b/Barcode Scanner/MainWindow.xaml
@@ -7,8 +7,12 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-
-    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-        <Button x:Name="myButton" Click="myButton_Click">Click Me</Button>
+    <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Button x:Name="pickImageButton" Click="pickImageButton_Click">Pick an image to read barcodes</Button>
+            <Button x:Name="liveScanButton" Click="liveScanButton_Click">Click Me</Button>
+        </StackPanel>
+        <TextBlock x:Name="decodingResultsTextBox" />
     </StackPanel>
+    
 </Window>
